
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int f () ;
 scalar_t__ r1 ;
 scalar_t__ r10 ;
 scalar_t__ r2 ;
 scalar_t__ r3 ;
 scalar_t__ r4 ;
 scalar_t__ r5 ;
 scalar_t__ r6 ;
 scalar_t__ r7 ;
 scalar_t__ r8 ;
 scalar_t__ r9 ;

f3(int i,int *p){register r1=0,r2=0,r3=0,r4=0,r5=0,r6=0,r7=0,r8=0,r9=0,r10=0;*p++=i?f():0;}
